<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"></include>

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/dimen_10"
        android:src="@drawable/com_facebook_button_background"/>

    <ImageView
        android:id="@+id/pick_image"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignBottom="@+id/profile_image"
        android:layout_alignRight="@+id/profile_image"
        android:src="@android:drawable/ic_menu_camera"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_image"
        android:layout_margin="@dimen/dimen_10"
        >


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <EditText
                android:id="@+id/input_firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_firstname"
                android:inputType="textNoSuggestions|textCapWords|textCapSentences"
                android:maxLines="1"
                android:singleLine="true"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_layout_firstname"
            >

            <EditText
                android:id="@+id/input_lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_lastname"
                android:inputType="textNoSuggestions|textCapWords|textCapSentences"
                android:maxLines="1"
                android:singleLine="true"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_phonenumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_layout_lastname"
            android:visibility="gone"
            >

            <EditText
                android:id="@+id/input_phonenumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_phonenumber"
                android:inputType="number"
                android:maxLength="10"
                android:maxLines="1"
                android:singleLine="true"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_layout_phonenumber"

            >

            <android.support.v7.widget.AppCompatAutoCompleteTextView
                android:id="@+id/input_selection_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/input_layout_phonenumber"
                android:hint="@string/hint_currentlocation"
                android:inputType="textNoSuggestions"/>
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_aboutme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_layout_location">

            <EditText
                android:id="@+id/input_aboutme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_aboutme"
                android:inputType="textNoSuggestions"

                android:maxLines="3"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/select_profession_spinner"
            style="@style/Widget.AppCompat.DropDownItem.Spinner"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/input_layout_aboutme"
            android:spinnerMode="dropdown"></android.support.v7.widget.AppCompatSpinner>

    </RelativeLayout>

    <Button
        android:id="@+id/submit_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="Submit"
        android:textAllCaps="false"
        />


</RelativeLayout>